refactor(deliver): 重构消息模板相关功能
- 新增消息类型相关接口和实现类
- 优化消息发送逻辑，支持多种消息类型
- 重构消息参数校验和设置
- 更新相关API接口和DTO